...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="1Hz-ue-jok">
                                <rect key="frame" x="57" y="80" width="300" height="101"/>
                                <constraints>
...
                                <rect key="frame" x="279" y="391" width="105" height="26"/>
                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                <state key="normal" title="Passwort vergessen">
                                    <color key="titleColor" red="0.6705882353" green="0.6705882353" blue="0.6705882353" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="ANMELDEN"/>
                                <connections>
                                    <action selector="pressSignInButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HTx-VE-naL"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="REGISTRIEREN">
                                    <color key="titleColor" red="0.33221542835235596" green="0.39553093910217285" blue="0.60788732767105103" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="E-Mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r2i-Fl-gZS">
                                <rect key="frame" x="30" y="291" width="354" height="35"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Passwort" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rmm-6f-UtL">
                                <rect key="frame" x="30" y="351" width="354" height="35"/>
                                <constraints>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Benutzername" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hOh-GH-V2c">
                                        <rect key="frame" x="30" y="120" width="354" height="35"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Passwort wiederholen" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YVS-5P-YUB">
                                        <rect key="frame" x="30" y="257" width="354" height="35"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <state key="normal" title="REGISTRIERUNG ABSCHLIESSEN">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <state key="normal" title="Übersicht">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="80" y="295" width="69" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <state key="normal" title="Mein Profil">
                                            <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Übersicht" id="BbJ-nc-zif">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="navbar_menu_icon" style="plain" id="4Fb-K2-4r2">
                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
...
