...
                                                    <action selector="confirmButtonPressed:" destination="JCj-ap-Jlj" eventType="touchUpInside" id="vTN-xV-OcT"/>
                                                    <action selector="confirmTouchUpInside:" destination="tF9-l1-Vly" eventType="touchUpInside" id="PPF-id-RUk"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEr-Df-ZlL">
                                                <rect key="frame" x="149" y="140" width="76" height="30"/>
                                                <state key="normal" title="Abbrechen"/>
                                                <connections>
                                                    <action selector="cancelTouchUpInside:" destination="tF9-l1-Vly" eventType="touchUpInside" id="GGL-jR-arm"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" red="0.85245304399999999" green="0.85245304399999999" blue="0.85245304399999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Geb-Datum:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xbi-Te-F0T">
                                <rect key="frame" x="20" y="150" width="80" height="17"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="JJJJ-MM-TT" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="T2H-EH-jVU">
                                <rect key="frame" x="110" y="143" width="169" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Geschlecht:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptb-iR-AxY">
                                <rect key="frame" x="20" y="184" width="78" height="17"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="m/w/n" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="klx-j9-gJF">
                                <rect key="frame" x="110" y="178" width="169" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beigetreten:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rvk-Xk-dSd">
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGK-un-Kxn">
                                <rect key="frame" x="134" y="228" width="146" height="30"/>
                                <state key="normal" title="Profildaten speichern"/>
                                <connections>
                                    <action selector="safeProfile:" destination="IG2-h7-6Xt" eventType="touchUpInside" id="M09-m0-B2F"/>
                                </connections>
                            </button>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Ein Zwei Drei" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="dQC-HH-B9X">
                                <rect key="frame" x="20" y="323" width="374" height="158"/>
...
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                <color key="textColor" red="0.47451645139999998" green="0.47449773550000002" blue="0.47451049090000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tVi-7j-KMa">
                                <rect key="frame" x="158" y="674" width="98" height="30"/>
                                <state key="normal" title="Konto löschen">
                                    <color key="titleColor" red="1" green="0.1118306135" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
                                <connections>
                                    <segue destination="tF9-l1-Vly" kind="presentation" id="BxG-Ev-Pkz"/>
                                </connections>
                            </button>
...
